[WFCORE-6346] Module java.base must open java.net package to all unnamed modules